tests/Stubs/syntaxErrorConfig/error.ts
export default {
  hello: 'world'
  hello:
}
